# MCP-NovelAI

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: pixelart_convert.py
src/novelai_mcp/: __init__.py  server.py
